update contrast error in join.html

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -415,7 +415,7 @@ footer img{                   /*This is supposed to work with the logo and any o
   }
   
   .mysubmit{
-    background-color: var(--sea-green);
+    background-color: var(--almost-teal);
     color: var(--text-color);
     margin: 1rem 0 0 0;
     padding: .5rem;
