--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -38,14 +38,14 @@ header{
     text-align:center;
 }
 
-/* main {
+/* main { 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;    
+    grid-template-columns: 1fr 1fr;    
     background-color: var(--primary-color);
     max-width: 800px; 
     margin: 75px auto;
     
-} */
+}  */
 
 .grid-item {
     padding: 20px;
@@ -256,7 +256,7 @@ header img{
 footer img{                   /*This is supposed to work with the logo and any other images in the footer ONLY*/
     float:left;               
     border-radius:100px;      
-    padding: 15px;     /* gives spacing but shortens image  */
+    /* padding: 15px;     gives spacing but shortens image  */
     width:150px;           
 }
  /* an image in the discover.html page */
