--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -17,8 +17,9 @@
 
     main{
         display:grid;
-        grid-template-columns: 3fr 3fr 3fr;
+        grid-template-columns: 3fr 3fr;
     }
+    
     #cards{
         display: grid;
         grid-template-columns: 2fr 1fr;
