--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -319,7 +319,21 @@ footer img{                   /*This is supposed to work with the logo and any o
     margin: 1rem;
 }
 
+/*          For Thanks.html */ 
+.discover_thanks{
+ padding-bottom: 13rem;
+ text-align: center;
+}
 
+.discover_thanks h5{
+    font-size: 3rem;
+    
+   
+}
+
+ .discover_thanks p{
+    text-align: center ;
+}
 
 
 /* ___________________________________________________________________________________________________________________________________________ */
@@ -332,19 +346,85 @@ footer img{                   /*This is supposed to work with the logo and any o
     grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
     margin: 1rem auto;
     padding:2rem;
-    text-align: center;
-   
+    text-align: center; 
 }
-       
-.members_cards{
-    display:grid;
+
+/* #members_data section{
+    border: 3px var(--text-color) solid;
+
+} */
+#members_main {
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    margin: 1rem auto;
+    padding: 2rem;
+    text-align: center;
+}
+
+.members_cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 5rem; /* Add gap to avoid overlap */
     justify-items: center;
 }
 
-#members_cards section {
+#members_data section {
     text-align: center;
-    border-style: solid;
+    border: 1px solid var(--text-color);
+    border-width: 3px;
+    border-radius: 5rem;
+    padding: 1rem; 
+    margin: .5rem;
+    box-shadow: .5rem .5rem .5rem var(--almost-teal);
+}
+
+.members_cards button {
+    padding: 2rem;
+    font-weight: 300;
+    background-color: var(--background-color);
+    color: var(--almost-teal);
+}
+
+.members_cards button:hover {
+    background-color: var(--sea-green);
+    color: var(--grey-blue);
+}
+
+.members_list h2 {
+    font-size: 1rem;
+}
+
+.members_list section {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.members_list section img {
+    display: none;
+}
+
+.members_list section:nth-child(even) {
+    background-color: var(--grey-blue);
+}
+
+.members_list section:nth-child(odd) {
+    background-color: var(--sea-green);
+}
+
+
+/* Was somewhat working so I commented out to keep this in case my idea dosen't work */
+.members_cards{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
+    gap:1rem;
+    justify-items: center;
+}
+
+#members_data section {
+    text-align: center;
+    border: 1px solid var(--text-color);
     border-width: 3px;
     border-radius: 5rem;
     padding: 1rem; 
@@ -363,12 +443,11 @@ footer img{                   /*This is supposed to work with the logo and any o
     background-color: var(--sea-green);
     color: var(--grey-blue);
 }
-
-
     /* List section in directory  */
 .members_list h2{
  font-size: 1rem;
 }
+
 .members_list section{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
