--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -25,7 +25,6 @@ header img{
    
 }
 
-/* figure out what this applies to and change class name */
 .home_main {
     max-width: 800px; 
     margin: 75px auto;
@@ -50,7 +49,7 @@ nav{
 }
 
 #menu-button::before{ 
-    /* supposed to use "&equiv;" in html to get the proper hamburger sign, but can't figure out how to utilize it */
+
     content: "☰";
 }
 
@@ -89,15 +88,13 @@ nav a{
 }
 
 nav ul li a:hover{
-
-
     font-weight: bold;  /* makes the text appear thicker/bolded when hovered */
     /* #f028f0 */
 }
 
-nav li{
-    list-style-type: none; /*this makes the dots besides the link disapear */
-}
+/* nav li{
+    list-style-type: none; /*this makes the dots besides the link disapear 
+} */
 
 .card {
     border-style: solid; /*shows that we want a border with this style */
