--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -2,9 +2,7 @@
 
 /* use this for help with css grid stuff: https://www.youtube.com/watch?v=uuOXPWCh-6o */
 
-
-/* _______________________________________________________________________________________________________________________________________ */
-/* For Most, If not All pages */
+/* ____________________________________For Most, If not All pages_______________________________ */
 :root{
     --background-color: #32343e; 
     --primary-color:white;
@@ -44,7 +42,6 @@ header{
     background-color: var(--primary-color);
     max-width: 800px; 
     margin: 75px auto;
-    
 } 
 
 .grid-item {
@@ -55,7 +52,7 @@ main ul{
     list-style-type: none;   
 }
 
-                                        /*  ALL Navigation */
+                                /*  [ALL Navigation] */
 nav{
     background-color: var(--background-color);
     color: var(--text-color);
@@ -77,7 +74,6 @@ nav ul.open{
     display:flex;
     flex-direction:column;
     justify-content: space-around;
-
 }
 
 nav ul li{
@@ -86,27 +82,27 @@ nav ul li{
 
 nav ul li a{
     display:block;
-    text-decoration:bold;
     color:var(--white-text);
     padding: 1rem;
 }
+
 nav a{
     color: var(--text-color);
     text-align: center;
-    font-size: large;
-    
+    font-size: large;  
 }
+
 nav ul li a:hover{
     color:var(--white-text);
     background-color: var(--blue-enough);
     font-weight: bold;  
 }
- nav li{    
 
-    list-style-type: none;     /*this makes the dots besides the link disapear  */
+nav li{    
+    list-style-type: none; /*this makes the dots besides the link disapear  */
 }
 
-     /*[Stuff within body] */
+             /*[Stuff within body] */
 body {
     font-size:20px;
     color:var(--text-color);
@@ -203,13 +199,12 @@ footer a:hover{
     content: "☰";   /* supposed to use "&equiv;" in html to get the proper hamburger sign, but can't figure out how to utilize it */
 
 }
-    /*nav when it's closed  */
+    /*[nav when it's closed] */
 #menu-button.open::before{
     content: 'x';
 }
-    /* dark mode button */
+    /* [dark mode button] */
 #dark-mode{
-    /* background-color: var(--grey-blue); */
     height: 2rem;
     position: absolute;
     top: 1rem;
@@ -274,9 +269,8 @@ footer img{                   /*This is supposed to work with the logo and any o
     border: 5px solid var(--almost-teal);
     transition: opacity 2s;
 } 
-  /* _________________________________________________________________END images________________________________________________________________  */
- /*_____________________________________________________________________________________________________________________________________________ */
-                        /* DISCOVER Page (discover.html)*/
+
+/*____________________________________DISCOVER Page (discover.html)______________________________*/
 .discover-main {
     text-align: right;
     font-size:2rem;
@@ -284,6 +278,11 @@ footer img{                   /*This is supposed to work with the logo and any o
 
 .discover-main a{
     color:var(--text-color);
+    
+}
+.discover-main a:hover{
+    background-color:var(--background-color);
+    color:var(--primary-color)
 }
 
 .discover-main section {    
@@ -319,7 +318,7 @@ footer img{                   /*This is supposed to work with the logo and any o
     margin: 1rem;
 }
 
-/*          For Thanks.html */ 
+/* ________________________________________ [For Thanks.html]_______________________________ */ 
 .discover_thanks{
  padding-bottom: 13rem;
  text-align: center;
@@ -327,20 +326,15 @@ footer img{                   /*This is supposed to work with the logo and any o
 
 .discover_thanks h5{
     font-size: 3rem;
-    
-   
 }
 
  .discover_thanks p{
     text-align: center ;
 }
-
-
 /* ___________________________________________________________________________________________________________________________________________ */
 
                                                 /* Business page (directory.html) */
         /* stuff for after Grid */
-        /* TO DO:  figure out why grid and list isn't working */
 #members_main{
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
@@ -351,8 +345,8 @@ footer img{                   /*This is supposed to work with the logo and any o
 
 /* #members_data section{
     border: 3px var(--text-color) solid;
-
 } */
+
 #members_main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
@@ -361,12 +355,7 @@ footer img{                   /*This is supposed to work with the logo and any o
     text-align: center;
 }
 
-.members_cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 5rem; /* Add gap to avoid overlap */
-    justify-items: center;
-}
+
 
 #members_data section {
     text-align: center;
@@ -389,38 +378,36 @@ footer img{                   /*This is supposed to work with the logo and any o
     background-color: var(--sea-green);
     color: var(--grey-blue);
 }
+/* [When Grid is selected] */
 
+.members_cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 8rem; /* Add gap to avoid overlap */
+    justify-items: center;
+}
+/*[When List is clicked in the directory page] */
 .members_list h2 {
     font-size: 1rem;
 }
-
 .members_list section {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding-left: 1rem;
     padding-right: 1rem;
 }
-
 .members_list section img {
     display: none;
 }
-
 .members_list section:nth-child(even) {
     background-color: var(--grey-blue);
 }
-
 .members_list section:nth-child(odd) {
     background-color: var(--sea-green);
 }
 
 
-/* Was somewhat working so I commented out to keep this in case my idea dosen't work */
-.members_cards{
-    display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
-    gap:1rem;
-    justify-items: center;
-}
+
 
 #members_data section {
     text-align: center;
