--- a/styles/base.css
+++ b/styles/base.css
@@ -68,7 +68,9 @@ main ul{
     list-style-type: none; 
 }
 
-
+main h3, h2{
+    font-weight:bold;
+}
 
     /*________________________________________________________ Menu button____________________________*/
 #menu-button{
@@ -170,6 +172,11 @@ body {
     width:100%;
     height:500px;
 }   
+/* _____________________________________________________IN WEATHER.HTML_______________________________ */
+
+.weather_main{
+    text-align: center;
+}
 
 /* ___________________________________________________________footer_____________________________________________________ */
 
