--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -57,66 +57,25 @@ nav{
     content: 'x';
 }
 
-/*nav when it's closed  */
-nav ul{ 
-    list-style:none;
-    text-align: center;
-    padding-inline-start: 0px; 
-    display:none; 
-}
-
-nav ul.open{
-    display:flex;
-    flex-direction:column;
-    justify-content: space-around;
-
-}
-
-nav ul li{
-    width:100%;
-}
-
-nav ul li a{
-    display:block;
-    text-decoration:none;
-    padding: 1rem;
-}
-
-nav a{
-    text-align: center;
-    
-}
-
-nav ul li a:hover{
-    font-weight: bold;  /* makes the text appear thicker/bolded when hovered */
-    /* #f028f0 */
-}
-
-/* nav li{
-    list-style-type: none; /*this makes the dots besides the link disapear 
-} */
-
 .card {
-    border-style: solid; /*shows that we want a border with this style */
-    border-width: 3.8px; /* width of the border*/
-    border-radius: .4rem; /*seems to control the curve of the border*/
-    /* width: 100%;  this made the cards stack besides each other*/
+    border-style: solid; 
+    border-width: 3.8px;
+    border-radius: .4rem; 
     padding: 35px;
-    margin: 1rem;  /* this gave the cards spacing between each other */   
+    margin: 1rem; 
 }
+
 footer{
-   
     padding: 45px;
     text-align: center;
-    
 }
-/* indext only */
+/* ______________________________________________index.html ___________________________________ */
 
 #hero_label::after{
     content: "medium";
 }
 
-/* _____________________________________________discover____________________________ */
+/* _____________________________________________Discover_page____________________________ */
 
 .discover-main {
     display: grid;
@@ -135,9 +94,7 @@ footer{
 
 .discover-main img:hover{
     box-shadow: 5px 5px black;
-    filter: blur(2px);
-    
+    filter: blur(2px);  
 }
-
 
 }
