--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,8 @@
 @media screen and (min-width: 800px){
+    
+    body{
+          font-size:20px;
+    }
     nav{
         padding: 8px 5px .3px 5px;
         grid-column:span;
@@ -42,6 +46,10 @@
     /* ________________________________________________Discover page___________________________________ */
     .discover-main img{
         width: 600px;
+    }
+    .discover-main a:hover{
+        background-color:var(--background-color);
+        color:var(--primary-color)
     }
     /*_________________________________________________form page__________________________________ */
     .join_main{
