--- a/a final project/styles/larger.css
+++ b/a final project/styles/larger.css
@@ -7,30 +7,54 @@
         --mulan:#421820;
         --who-knows:#283044;
     }
-       
-            /* Navigation stuff */
-    #menu-button{
-        display: none;
+
+    /* _____________________________________________________________________NAVIGATION ______________________________________________________*/
+    nav{
+        padding: 8px 5px .3px 5px;
+        grid-column:span;
+    }
+   
+    nav ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    #hamburger-button{
+        display: none
     }
 
-    /* nav ul li a {
-        text-decoration: none;
-        padding:2rem;
-    } */
+    /* ________________________________________________________________INDEX PAGE___________________________________________________ */
+    .home-main{
+        display: grid;
+        grid-template-columns: 1fr 2fr ;
+        background-color: var(--elsa);
+        border: 10px var(--moana);
+        margin: 5rem;
+        padding:20px;
+    }
+    
+    .home-main{
 
-    nav ul li:hover {
-        color: var(--elsa);
-        background-color: var(--moana);
-        padding:2rem;
-    }   
+        background-color: var(--elsa);
+        border: 10px var(--moana);
+        margin: 5rem;
+        padding:20px;
+    }
 
+    .hero img{
+        width:100%;
+    
+    }
 
-    /* Footer Stuff */
+    
+    /* __________________________________________________________________________Footer Stuff _________________________________________________*/
     /* footer{ NOTE --> why don't you break the footer to two sections, logo to left, contacts in the middle? 
     Or breakit to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME */
     footer{
         background-color: var(--aurora);
         text-align: center;
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     footer img{
         float: left;
