--- a/a-final-project/styles/base.css
+++ b/a-final-project/styles/base.css
@@ -137,14 +137,22 @@ nav ul.open li{
 .hero{
     grid-column: 1/4;
     margin: 20px;
-    /* text-align: center; */
     position: relative;
     z-index: 1 ;
 }
 .hero img{
-    /* height:25%; */
-    width:100%;
+    height:auto;
+    width:auto;
+    max-width:100%;
     padding:.3rem;
+    display: block; /* Center the image horizontally within its container */
+    margin: 0 auto; /* Centers the image within the container */
+}
+
+.hero picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero-label{
     position:relative;
@@ -155,10 +163,7 @@ nav ul.open li{
     box-shadow: 0 0 1rem ;
     opacity: .75;
 }
-/* TO DO: Make weather so that it stays in the left columsn [[only remove this after ALL the cards in index page are taken care of   */
-.weater{
-    grid-column: 1/2;
-}
+
     /* footer Note: { Maybe make footer similar to his pagehttps://www.slc.gov/ **IF YOU GOT TIME */
 footer{
     background-color: var(--aurora);
@@ -179,6 +184,7 @@ footer a:hover{
 }
 /* ________[The copy right symbol at the very bottom of the page, not in footer] */
 .copyright{
+    grid-column:1/5;
     text-align: center;
     color:var(--mulan)
 }
