--- a/a-final-project/styles/base.css
+++ b/a-final-project/styles/base.css
@@ -21,6 +21,11 @@ Consider making the footer and header the same color as the background/body and 
     --who-knows:#283044;
 }
 
+::selection{
+    background-color: var(--cinderella);
+    color:var(--moana)
+}
+
 body{
     background-color: var(--aurora);
     font-family: "playwrite" ;
@@ -78,12 +83,12 @@ nav ul li a{
     
 }
 nav ul li a:hover{
-    color:var(--moana);
-    background-color: var(--cinderella);
+    color:var(--elsa);
+    background-color: var(--moana);
     font-weight: bold;  
 }
 
-/*_______________________Hamburger/Mobile Navigation button__________________ */
+/*_____________________[Hamburger/Mobile Navigation button]__________________ */
 #hamburger-button{
     background-color:var(--cinderella);
     padding:.5rem;
@@ -92,7 +97,7 @@ nav ul li a:hover{
     content: "☰";   
 
 }
-/*______________________[nav when it's closed]____________________ */
+/*_____________________[nav when it's closed]____________________ */
 #hamburger-button.open::before{
     content: 'x';
 }
@@ -126,25 +131,64 @@ nav ul.open li{
 #dark-mode.dark::before{
     content: "☀️"; 
 }
+
+/* _________________________[Footer]_______________________*/
+    /* footer Note: { Maybe make footer similar to his pagehttps://www.slc.gov/ **IF YOU GOT TIME */
+    footer{
+        background-color: var(--aurora);
+        border-style:double;
+        border-color: var(--mulan);
+        text-align: center;
+        /* For border stuff see:
+        https://www.w3schools.com/css/css_border.asp#:~:text=The%20CSS%20border%20properties%20allow,have%20a%20red%20bottom%20border.
+         */  
+    }
+    footer a{
+        color:var(--who-knows)
+    }
+    /*_______[when you hover over the link text [email]]____________ */
+    footer a:hover{
+        color:var(--elsa);
+        background-color:var(--who-knows);
+    }
+    /* ___[The copy right symbol at the very bottom of the page, not in footer] */
+    .copyright{
+        grid-column:1/5;
+        text-align: center;
+        color:var(--mulan)
+    }
+    .copyright a:hover{
+        color: var(--who-knows);
+        background-color: var(--cinderella);
+    
+    }
+
+
 /*_______________________________________________________ Index Page_________________________________________________________ */
 .home-main{
-
     background-color: var(--elsa);
-    /* margin: 3rem;
-    padding:20px; */
+    box-shadow: 0 10px 50px var(--moana);
 }
-/* __________________[HERO IMAGE:]________________ */
+/* _______[HERO IMAGE:]_______ */
 .hero{
     grid-column: 1/4;
     margin: 20px;
-    /* text-align: center; */
     position: relative;
     z-index: 1 ;
 }
 .hero img{
-    /* height:25%; */
-    width:100%;
+    height:auto;
+    width:auto;
+    max-width:100%;
     padding:.3rem;
+    display: block; /* Center the image horizontally within its container */
+    margin: 0 auto; /* Centers the image within the container */
+}
+
+.hero picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero-label{
     position:relative;
@@ -155,35 +199,97 @@ nav ul.open li{
     box-shadow: 0 0 1rem ;
     opacity: .75;
 }
-/* TO DO: Make weather so that it stays in the left columsn [[only remove this after ALL the cards in index page are taken care of   */
-.weater{
-    grid-column: 1/2;
+
+/* _________________Product stuff on index page________________ */
+.home-product {
+    border-style: solid;
+    border-width: 3.8px; /* width of the border*/
+    border-radius: .4rem; 
+    padding: 35px;
+    margin: 1rem;  /* this gave the cards spacing between each other */   
 }
-    /* footer Note: { Maybe make footer similar to his pagehttps://www.slc.gov/ **IF YOU GOT TIME */
-footer{
-    background-color: var(--aurora);
-    border-style:double;
-    border-color: var(--mulan);
-    text-align: center;
-    /* For border stuff see:
-    https://www.w3schools.com/css/css_border.asp#:~:text=The%20CSS%20border%20properties%20allow,have%20a%20red%20bottom%20border.
-     */  
-}
-footer a{
-    color:var(--who-knows)
-}
-/*_______[when you hover over the link text [email]]____________ */
-footer a:hover{
-    color:var(--elsa);
-    background-color:var(--who-knows);
-}
-/* ________[The copy right symbol at the very bottom of the page, not in footer] */
-.copyright{
-    text-align: center;
-    color:var(--mulan)
-}
-.copyright a:hover{
-    color: var(--who-knows);
-    background-color: var(--cinderella);
+
+.home-product a:hover{
+    color: var(--floral-white); 
+    background: var(--background-color);
 
 }
+.home-product a:link{
+    color:var(--cinderella);
+}
+
+/* ________________________________________________________Order.html Stuff___________________________________________ */
+
+.join{
+    display: grid;    
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  }
+
+  .join > div{
+    margin: 1rem;
+    padding: 1rem;
+    border: 4px black solid;
+    border-radius: 5px;  
+    width: 90%;
+    min-width: 400px;
+  }
+
+  label.myinput{
+    display:block;
+    padding-top: 1rem;
+  }
+  
+  label.myinput input, label.myinput textarea{
+    display:block;
+    font-size: 1.2rem;
+    padding: .5rem;
+    width: 20rem;
+    max-width: 100%;
+  }
+  
+  label.myradio{
+    display: block;
+    margin-right: .2rem;
+    font-size: 1.3rem;  
+    padding-top: .5rem;
+  }
+  
+  label.myradio input{
+    margin-right: 1rem;
+  }
+  
+  .mysubmit{
+    background-color: var(--mulan);
+    color: var(--elsa);
+    margin: 1rem 0 0 0;
+    padding: .5rem;
+    font-size: 1.5rem;
+  }
+  
+  label.myinput input:required{
+    border-color: var(--mulan);
+  }
+  
+  input:valid{
+    background-color: var(--elsa);
+  }
+
+
+  input:invalid{
+    background-color: var(--moana) ;
+    /* border-bottom: var(--moana); */
+  }
+
+  .join-confirm{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+  }
+
+  #thankyou-main h2{
+    text-align: center;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding: 1rem 0;
+  }
+
