--- a/a-final-project/styles/larger.css
+++ b/a-final-project/styles/larger.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:600px){
+@media screen and (min-width:900px){
     :root{
         --elsa: #EEFFDB;
         --cinderella: #B8D4E3;
@@ -9,16 +9,16 @@
     }
 
     /* _____________________________________________________________________NAVIGATION ______________________________________________________*/
-    nav{
+    /* nav{
         padding: 8px 5px .3px 5px;
         grid-column:span;
-    }
+    } 
    
     nav ul{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-    }
+    }*/
     #hamburger-button{
         display: none
     }
@@ -32,29 +32,26 @@
         margin: 5rem;
         padding:5rem;
     }
+    /* .hero img{
+        width:span;
     
-    .home-main{
-
-        background-color: var(--elsa);
-        border: 10px var(--moana);
-        margin: 5rem;
-        padding:20px;
-    }
+    } */
 
     .hero img{
-        width:100%;
-    
+        /* width:100%; */
+        justify-content: left;
+        padding:.3rem;
     }
 
-    
-    /* __________________________________________________________________________Footer Stuff _________________________________________________*/
+
     /* footer{ NOTE --> why don't you break the footer to two sections, logo to left, contacts in the middle? 
-    Or breakit to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME */
+    /* /* Or breakit to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME  */
+    /* __________________________________________________________________________Footer Stuff _________________________________________________*/
     footer{
-        background-color: var(--aurora);
         text-align: center;
-        display:grid;
+        background-color: var(--aurora);
         grid-template-columns: 1fr 1fr 1fr 1fr;
+        display:grid;
     }
     footer img{
         float: left;
