--- a/a-final-project/styles/base.css
+++ b/a-final-project/styles/base.css
@@ -33,9 +33,9 @@ body{
 header{
     display:flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: var(--aurora);
-    padding: .4rem 1rem;
+    /* padding: .4rem 1rem; */
     text-align: center;
 
 }
@@ -46,16 +46,14 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+        margin:0;
+    font-size:1rem;
 }
 #logo img, footer img{
     border-radius: 10px;
     margin: 2.4rem;
 }
 
-#logo{
-    margin:0;
-    font-size:1rem;
-}
 /* ____________[Navigation stuff]________________ */
 nav{
     background-color: var(--elsa);
@@ -128,8 +126,9 @@ nav ul.open li{
     content: "☀️"; 
 }
 /*_______________________________________________________ Index Page_________________________________________________________ */
-.home-main, .order-main{
+.home-main, .order-main, .products-main, .about-main{
     background-color: var(--elsa);
+    
     /* margin: 3rem;
     padding:20px; */
 }
@@ -166,25 +165,33 @@ nav ul.open li{
     border-style: solid; 
     border-width: 3.8px; 
     border-radius: 5rem; 
+    
 }
 
-.home-product{
+.home-product section{
+
     display: grid;
     grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
+    margin:4rem;
+    padding:4rem;
+
     color: var(--mulan);
 }
 
 .home-product img{
     border-radius: 8rem; 
     box-shadow:  0 5px 8px 5px var(--moana);
-    /* Change to 8rem if you want images to be circles*/
 }
 
 /* TO DO: Make weather so that it stays in the left columsn [[only remove this after ALL the cards in index page are taken care of   */
-.weater{
+.weather{
+    text-align: center;
     grid-column: 1/2;
 }
-
+#forecast{
+    display: flex;
+    justify-content: space-around;
+}
 
 /* _________________________________________________ORDER.HTML____________________________________ */
     .order-main{
