--- a/a-final-project/styles/larger.css
+++ b/a-final-project/styles/larger.css
@@ -24,28 +24,32 @@
     }
 
     /* ________________________________________________________________INDEX PAGE___________________________________________________ */
-    .home-main{
+    .home-main, .order-main, .products-main, .about-main{
         display: grid;
-        grid-template-columns: 1fr 2fr ;
-        background-color: var(--elsa);
-        border: 10px var(--moana);
         margin: 5rem;
         padding:5rem;
     }
-    /* .hero img{
-        width:span;
-    
-    } */
 
     .hero img{
-        /* width:100%; */
-        justify-content: left;
         padding:.3rem;
     }
 
+    #forecast{
+        display: flex;
+        justify-content: space-around;
+    }
 
-    /* footer{ NOTE --> why don't you break the footer to two sections, logo to left, contacts in the middle? 
-    /* /* Or breakit to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME  */
+    .home-product{
+        justify-content: space-around;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    }
+    
+
+    /* /* Or breakit to four sections, left is logo, 
+    left 1 is contacts 
+    middle is copyright 
+    and far right is social media 
+    like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME  */
     /* __________________________________________________________________________Footer Stuff _________________________________________________*/
     footer{
         text-align: center;
@@ -56,7 +60,6 @@
     footer img{
         float: left;
         justify-content: center;
-        height: 14rem;
     }
 
 }
