--- a/a-final-project/styles/base.css
+++ b/a-final-project/styles/base.css
@@ -17,7 +17,21 @@
     --moana: #AD343E;
     --mulan:#421820;
     --who-knows:#283044;
+    --text-color:black;
 }
+
+/* for Dark mode
+:root{
+    --elsa:#191528;
+    --cinderella:#5f1e48;
+    --aurora:#5C162E;
+    --moana: #7C162E;
+    --mulan:  #110E1B ;
+    --who-knows: ;
+    --text-color:white;
+
+    // Dark mode colors:
+} */
 
 ::selection{
     background-color: var(--cinderella);
@@ -27,16 +41,19 @@
 body{
     background-color: var(--aurora);
     font-family: "playwrite" ;
+    color:var(--text-color);
+  
 }
 
 /* _____________[header stuff]______________________ */
 header{
-    display:flex;
+    /* display:flex;
     align-items: center;
-    justify-content: space-around;
+    text-align: center; */
+    /* justify-content: space-around; */
     background-color: var(--aurora);
     /* padding: .4rem 1rem; */
-    text-align: center;
+  
 
 }
 
@@ -125,15 +142,19 @@ nav ul.open li{
 #dark-mode.dark::before{
     content: "☀️"; 
 }
-/*_______________________________________________________ Index Page_________________________________________________________ */
-.home-main, .order-main, .products-main, .about-main{
-    background-color: var(--elsa);
-    
-    /* margin: 3rem;
-    padding:20px; */
+
+/* ______________________Multi Page code________________________________ */
+.home-main, .order-main, .products-main, .about-main, .confirm-main{
+    background-color: var(--elsa);    
+    font-size:1.2rem;
+    margin: 3rem;
+    padding:20px;
 }
+
+/*_______________________________________________________ Index Page_________________________________________________________ */
+
 /* ________[HERO IMAGE:]________ */
-.hero{
+.hero {
     display:flex;
     justify-content:center;
     align-items: center;
@@ -183,7 +204,9 @@ nav ul.open li{
     box-shadow:  0 5px 8px 5px var(--moana);
 }
 
-/* TO DO: Make weather so that it stays in the left columsn [[only remove this after ALL the cards in index page are taken care of   */
+/* ________________________[weather index.html]________________________
+TO DO: Make weather so that it stays in the left columsn
+ [[only remove comments after ALL the cards in index page are taken care of   */
 .weather{
     text-align: center;
     grid-column: 1/2;
@@ -262,9 +285,35 @@ nav ul.open li{
       grid-template-columns: 1fr 1fr;
       text-align: center;
     }
+/* ____________________________________________order-confirmation.html______________________ */
+
+.confirm-main {
+    /* margin:12rem;
+    padding:8rem; */
+    display: flex;
+    flex-direction:column;
+    text-align: center;
+}
+/* ________________________________________________About-us.html____________________________________________ */
+
+.about-main {
+    display: flex;
+    flex-direction:column;
+}
+.about-header{
+    justify-content: center;
+    text-align: center;
+}
+
+#google-maps{
+    display:flex;
+    justify-content: center;
+}
+
 
     /* footer Note: { Maybe make footer similar to his pagehttps://www.slc.gov/ **IF YOU GOT TIME */
 footer{
+    display: flex;
     background-color: var(--aurora);
     border-style:double;
     border-color: var(--mulan);
@@ -274,15 +323,39 @@ footer{
      */  
 }
 footer a{
-    color:var(--who-knows)
+    color:var(--who-knows);
 }
 /*_______[when you hover over the link text [email]]____________ */
 footer a:hover{
-    color:var(--elsa);
-    background-color:var(--who-knows);
+    color:var(--who-knows);
+    background-color:var(--elsa);
 }
+
+.social-media {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+.social-media a {
+    display: inline-block;
+}
+
+.social-media img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+}
+
+.social-media img:hover {
+    background-color: var(--elsa);
+}
+
 /* ________[The copy right symbol at the very bottom of the page]*/
 .copyright{
+    grid-column: 1/5;
     text-align: center;
     color:var(--mulan)
 }
